# rocketry

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Contributors.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
.github/workflows/: ci_debug.yml  main.yml  release.yaml  test_cov.yml  test_docs.yml  test_pr.yml
atlas/: __init__.py  __main__.py  _session.py  _setup.py  session.py
atlas/conditions/: __init__.py  git.py  misc.py  parameter.py  scheduler.py  special.py  task.py  time.py
atlas/config/: __init__.py  parse.py  parser.py
atlas/core/: __init__.py  exceptions.py
atlas/log/: __init__.py  csv.py  memory.py
atlas/parameters/: __init__.py  arguments.py
atlas/parse/: __init__.py  builtin.py  clause.py  condition.py  misc.py  parameters.py  scheduler.py  session.py  statement.py  task.py
atlas/task/: __init__.py  func.py  notebook.py  pyscript.py  terminal.py
atlas/test/: conftest.py  pytest.ini
atlas/time/: __init__.py  cycle.py  interval.py
atlas/tools/: log.py  task.py
dataware/core/: etlbase.py  exceptions.py
doc/: api.txt  conf.py  extending.rst  index.rst
doc/reference/: condition.rst  index.rst  scheduler.rst  session.rst  task.rst
docs/: Alchemy.ipynb  Proto.ipynb  conf.py  contributing.rst  environment.pickle  extending.rst  faqs.rst  header.html  how_it_works.rst  index.rst  rocketry_vs_alternatives.rst  s5defs.txt  versions.rst
docs/.ipynb_checkpoints/: Alchemy-checkpoint.ipynb
docs/code/: demo.py  demo_advanced.py  demo_basic.py  demo_intermediate.py  execution.py  minimal.py  naming.py
docs/condition_syntax/: dependence.rst  execution.rst  fixed_interval.rst  index.rst  task_status.rst  timedelta.rst
docs/cookbook/: bigger_applications.rst  conditions.rst  controlling_runtime.rst  django.rst  fastapi.rst  index.rst  robust_applications.rst  settings.rst  testing.rst  (+1 more)
powerbase/: __init__.py  __main__.py  _session.py  _setup.py  _version.py
pypipe/: __init__.py  __main__.py  session.py  temp.txt
redengine/: __init__.py  __main__.py  _base.py  _pkg.py  _session.py  _setup.py  _version.py  application.py  cli.py  exc.py  session.py
requirements/: build.txt  ci.txt  coverage.txt  docs.txt
rocketry/: __init__.py  _base.py  _setup.py  _version.py  application.py  event.py  events.py  exc.py  session.py
scripts/: install.bat
(+1176 files in other folders)
